feat: Added initial files

--- a/.gitignore
+++ b/.gitignore
@@ -1,38 +1,39 @@
-.mypy_cache
-__pycache__
+.python-version
 
 #ai
 ai/.mypy_cache
-ai/__pycache__
+ai/**/*/__pycache__
 ai/.pytest_cache
 ai/.coverage
 ai/.coverage.*
-ai/.env*
+ai/*.env
 ai/.venv
 ai/.vscode
+ai/**/*/*.egg-info
+ai/*.egg-info
+ai/.python-version
 
 #backend
 backend/.mypy_cache
-backend/__pycache__
+backend/**/*/__pycache__/
 backend/.pytest_cache
 backend/.coverage
 backend/.coverage.*
-backend/.env*
+backend/*.env
 backend/.venv
 backend/.vscode
+backend/**/*/*.egg-info
+backend/*.egg-info
+backend/.python-version 
 
 #frontend
 frontend/node_modules
 frontend/.pnp
 frontend/.pnp.js
-
 frontend/coverage
-
 frontend/build
-
 frontend/.DS_Store
-frontend/.env*
-
+frontend/*.env
 frontend/npm-debug.log*
 frontend/yarn-debug.log*
 frontend/yarn-error.log*
