--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,27 +1,47 @@
 {
-  "name": "phonic-api-frontend",
+  "name": "frontend",
   "version": "1.0.0",
+  "type": "module",
   "description": "Frontend for Live Video/Audio Transcript application using React and RecordRTC.",
   "main": "src/index.tsx",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "NODE_OPTIONS=--openssl-legacy-provider react-scripts start",
+    "build": "NODE_OPTIONS=--openssl-legacy-provider react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.8.2",
+    "@types/react-redux": "^7.1.25",
+    "mermaid": "^11.6.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
-    "recordrtc": "^5.6.1",
-    "socket.io-client": "^4.0.0"
+    "react-redux": "^8.1.3",
+    "react-scripts": "^5.0.1",
+    "recordrtc": "^5.6.1"
   },
   "devDependencies": {
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.2",
     "@types/recordrtc": "^5.6.14",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "@typescript-eslint/parser": "^5.62.0",
+    "eslint": "^8.56.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "typescript": "^4.1.2"
   },
   "homepage": ".",
-  "license": "MIT"
+  "license": "MIT",
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
