--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "backend"
 version = "0.1.0"
-description = "FastAPI backend for live video/audio transcription with Whisper AI integration"
+description = "FastAPI backend for live audio transcription with Whisper AI integration"
 authors = [
     { name="Gabriel Munumel", email="gabrielmunumel@gmail.com" }
 ]
@@ -9,13 +9,13 @@ dependencies = [
     "fastapi==0.110.2",
     "uvicorn[standard]==0.29.0",
     "websockets==12.0",
-    "pydantic==2.7.1",
-    "python-multipart==0.0.9",
-    "whisper==1.1.10",
-    "numpy==1.26.4",
-    "torch==2.3.0"
+    "redis==6.2.0",
+    "python-multipart==0.0.9"
 ]
 
 [build-system]
 requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
+
+[tool.pylint]
+disable = "E0401, C0114, C0116"
