--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -10,7 +10,10 @@ dependencies = [
     "uvicorn[standard]==0.29.0",
     "websockets==12.0",
     "redis==6.2.0",
-    "python-multipart==0.0.9"
+    "python-multipart==0.0.9",
+    "pytest==8.4.0",
+    "pytest-asyncio==1.0.0",
+    "types-requests==2.32.0.20250602"
 ]
 
 [build-system]
@@ -18,4 +21,13 @@ requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
 
 [tool.pylint]
-disable = "E0401, C0114, C0116"
+disable = "E0401, C0114, C0115, C0116"
+
+[tool.pytest.ini_options]
+pythonpath = [
+    ".",
+    "src",
+]
+testpaths = [
+    "tests",
+]
