--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,8 @@
     "recordrtc": "^5.6.1"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^12.1.5",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.2",
     "@types/recordrtc": "^5.6.14",
