--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,7 +32,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "typescript": "^4.1.2"
   },
-  "homepage": ".",
+  "homepage": "/portfolio/phonic-ai",
   "license": "MIT",
   "browserslist": {
     "production": [
